Asteria/force-app/main/default/objects/CardPayment__c/CardPayment__c.object-meta.xml
<CustomObject>
    <label>CardPayment</label>
    <nameField>
        <label>CardPayment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CardPayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>