Asteria/force-app/main/default/objects/CardPayment__c/fields/CardHolderFirstName__c.field-meta.xml
<CustomField>
    <fullName>CardHolderFirstName__c</fullName>
    <label>CardHolderFirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>