Asteria/force-app/main/default/objects/CardPayment__c/fields/CardHolderLastName__c.field-meta.xml
<CustomField>
    <fullName>CardHolderLastName__c</fullName>
    <label>CardHolderLastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>