Asteria/force-app/main/default/objects/CardPayment__c/fields/CardLastFour__c.field-meta.xml
<CustomField>
    <fullName>CardLastFour__c</fullName>
    <label>CardLastFour</label>
    <length>4</length>
    <type>Text</type>
</CustomField>