Asteria/force-app/main/default/objects/CardPayment__c/fields/CardName__c.field-meta.xml
<CustomField>
    <fullName>CardName__c</fullName>
    <label>CardName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>