Asteria/force-app/main/default/objects/CardPayment__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>CardType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>