Asteria/force-app/main/default/objects/CardPayment__c/fields/ExpiryMonth__c.field-meta.xml
<CustomField>
    <fullName>ExpiryMonth__c</fullName>
    <label>ExpiryMonth</label>
    <length>2</length>
    <type>Text</type>
</CustomField>