Asteria/force-app/main/default/objects/CardPayment__c/fields/ExpiryYear__c.field-meta.xml
<CustomField>
    <fullName>ExpiryYear__c</fullName>
    <label>ExpiryYear</label>
    <length>4</length>
    <type>Text</type>
</CustomField>